<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Inventory App</string>

    <string name="empty_view_title_text">Nothing to show.</string>
    <string name="empty_view_subtitle_text">Why don`t you add some items through the button bellow?</string>

    <string name="error_unknown_uri">Cannot query unknown URI: <xliff:g id="unknown_uri">%s</xliff:g></string>

    <string name="error_insertion_failed">Failed to insert row for <xliff:g id="error_insertion">%s</xliff:g></string>

    <string name="error_inventory_provider_operation_not_supported"><xliff:g id="operation">%s</xliff:g> not supported for <xliff:g id="uri">%s</xliff:g></string>

    <string name="field_required">Field required: <xliff:g id="field_name">%s</xliff:g></string>

    <string name="unknows_uri_match">Unknown URI <xliff:g id="uri">%s</xliff:g> with match <xliff:g id="match">%d</xliff:g></string>

    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">delete all entries</string>
    <string name="action_save">Save item</string>
    <string name="action_delete">Delete item</string>

    <string name="product_image_content_description">Product image</string>

    <string name="product_label_supplier">Supplier: </string>
    <string name="product_label_price">Price:</string>
    <string name="product_label_quantity">Quantity:</string>
    <string name="category_product">Product:</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_price">price</string>
    <string name="category_Supplier">Supplier:</string>

    <string name="default_currency_symbol">$</string>
    <string name="default_currency">USD</string>

    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="quantity_default_value">0</string>
    <string name="hint_product_supplier">Supplier Name</string>
    <string name="pick_an_image">You haven\'t picked Image</string>
    <string name="ask_gallery_permission">Sorry, we need permission to pick images from your gallery.</string>
    <string name="product_activity_new_product">New Product</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete_all_dialog_msg">Are you sure to delete all items?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="delete_item_failed">Error while deleting item</string>
    <string name="delete_item_successful">Item deleted</string>
    <string name="update_item_successful">Item updated</string>
    <string name="insert_item_successful">Item saved</string>
    <string name="insert_item_failed">Error while saving item</string>
    <string name="update_item_failed">Error while updating item</string>

    <string name="order_product_button">order product</string>

    <string name="order_email_subject">Order for: <xliff:g id="productName">%s</xliff:g></string>
    <string name="order_email_message">
        Product: <xliff:g id="name">%s</xliff:g>\n
        Price: <xliff:g id="currencySimbol">%s</xliff:g><xliff:g id="price">%s</xliff:g> <xliff:g id="currency">%s</xliff:g>\n
        Supplier: <xliff:g id="supplier">%s</xliff:g>\n
        Quantity: <xliff:g id="quantity">%s</xliff:g>
    </string>

    <string name="sell_item">Sell item</string>
    <string name="sold_out">Sold out</string>

</resources>
