<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="study.pmoreira.project9.ui.product.ProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_product"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/product_name_editext"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_name"
                    android:inputType="textCapWords"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_currency_symbol"/>

                    <EditText
                        android:id="@+id/product_price_edittext"
                        style="@style/EditorFieldStyle"
                        android:layout_width="wrap_content"
                        android:hint="@string/hint_product_price"
                        android:inputType="numberDecimal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_currency"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/minus_quantity_button"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:text="@string/minus_sign"/>

                    <TextView
                        android:id="@+id/product_quantity_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/default_margin"
                        android:layout_marginRight="@dimen/default_margin"
                        android:fontFamily="?android:textAppearanceMedium"
                        android:gravity="center_horizontal"
                        android:minWidth="50dp"
                        android:text="@string/quantity_default_value"/>

                    <Button
                        android:id="@+id/plus_quantity_button"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:text="@string/plus_sign"/>

                </LinearLayout>

                <ImageView
                    android:id="@+id/product_imageview"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="@dimen/default_margin"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_product"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_measurement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_Supplier"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <EditText
                    android:id="@+id/product_supplier_editext"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_supplier"
                    android:inputType="textCapWords"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            style="@style/CustomButton"
            android:onClick="orderProduct"
            android:text="@string/order_product_button"/>

    </LinearLayout>

</ScrollView>
