<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/card_margin"
    android:elevation="7dp"
    card_view:cardCornerRadius="@dimen/card_radius"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/product_imageview"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/product_image_content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/default_product"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_name_textview"
                style="@style/product_title_textview"
                tools:text="Product 4"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/product_features_label_textview"
                        android:text="@string/product_label_supplier"/>

                    <TextView
                        style="@style/product_features_label_textview"
                        android:text="@string/product_label_price"/>

                    <TextView
                        style="@style/product_features_label_textview"
                        android:text="@string/product_label_quantity"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/product_supplier_textview"
                        style="@style/product_features_textview"
                        tools:text="Very long supplier name name name name"/>

                    <TextView
                        android:id="@+id/product_price_textview"
                        style="@style/product_features_textview"
                        tools:text="R$ 75,00"/>

                    <TextView
                        android:id="@+id/product_quantity_textview"
                        style="@style/product_features_textview"
                        tools:text="25"/>

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/sell_button"
                style="@style/CustomButton"
                android:text="@string/sell_item"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>